# ikuchnia_api

./: .gitignore  LICENSE  Readme.md  example.json  get_text.py  parse_html.py  pyproject.toml  requirements.txt  return_type.py  sid.json  test.py
src/ikuchnia/: meal_fetcher.py  parse_html.py
