[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ikuchnia"
version = "0.0.1"
authors = [
    { name = "Mio-coder" },
]
description = "Wrapper for iKuchnia api"
readme = "README.md"
requires-python = ">= 3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "msgspec",
    "requests",
]

[project.urls]
Source = "https://github.com/Mio-coder/ikuchnia_api"
Homepage = "https://github.com/Mio-coder/ikuchnia_api"
Issues = "https://github.com/Mio-coder/ikuchnia_api/issues"